--- a/simulation_unitree_go1/go1_config/config/move_base/costmap_common_params.yaml
+++ b/simulation_unitree_go1/go1_config/config/move_base/costmap_common_params.yaml
@@ -1,8 +1,8 @@
 # obstacle_range: 5.0
 # raytrace_range: 10.0
-footprint: [[-0.40, -0.245], [-0.40, 0.245], [0.40, 0.245], [0.40, -0.245]]
+footprint: [[-0.20, -0.145], [-0.20, 0.145], [0.20, 0.145], [0.20, -0.145]]
 
-transform_tolerance: 0.2
+transform_tolerance: 1.0
 resolution: 0.05 
 
 # static_map_layer:
@@ -11,13 +11,13 @@ resolution: 0.05
 
 obstacles_layer:
   observation_sources: laser_scan
-  laser_scan: {sensor_frame: base_scan, data_type: LaserScan, topic: scan,
+  laser_scan: {sensor_frame: velodyne, data_type: LaserScan, topic: scan,
   obstacle_range: 5.0, raytrace_range: 7.0, marking: true, clearing: true}
 
-3d_obstacles_layer:
-  observation_sources: laser_scan
-  laser_scan: {sensor_frame: base_scan, data_type: LaserScan, topic: scan,
-  obstacle_range: 5.0, raytrace_range: 7.0, marking: true, clearing: true}
+# 3d_obstacles_layer:
+#   observation_sources: laser_scan
+#   laser_scan: {sensor_frame: velodyne, data_type: LaserScan, topic: scan,
+#   obstacle_range: 5.0, raytrace_range: 7.0, marking: true, clearing: true}
 
 
 # inflation_layer:
