--- a/simulation_unitree_go1/go1_config/config/move_base/global_costmap_params.yaml
+++ b/simulation_unitree_go1/go1_config/config/move_base/global_costmap_params.yaml
@@ -10,13 +10,16 @@ global_costmap:
   rolling_window: false
 
   cost_scaling_factor: 0.15
-  inflation_radius: 0.3
+  inflation_radius: 0.4
 
   always_send_full_costmap: true
-  transform_tolerance: 0.2
+  transform_tolerance: 2.0
+
+  origin_x: -2.5
+  origin_y: -2.5 
 
   plugins:
     - {name: static_layer,    type: "costmap_2d::StaticLayer"}
     - {name: obstacles_layer,  type: "costmap_2d::ObstacleLayer"}
     - {name: inflation_layer,     type: "costmap_2d::InflationLayer"}
-    - {name: 3d_obstacles_layer,  type: "costmap_2d::VoxelLayer"}
+    # - {name: 3d_obstacles_layer,  type: "costmap_2d::VoxelLayer"}
