--- a/simulation_unitree_go1/go1_config/config/move_base/local_costmap_params.yaml
+++ b/simulation_unitree_go1/go1_config/config/move_base/local_costmap_params.yaml
@@ -1,21 +1,23 @@
 local_costmap:
-  global_frame: odom
+  global_frame: map
   robot_base_frame: base_footprint
 
   update_frequency: 4.0 
   publish_frequency: 2.0
-  transform_tolerance: 0.2 
+  transform_tolerance: 2.0 
 
   static_map: false
   rolling_window: true
 
   width: 5.0
   height: 5.0
+  origin_x: -2.5
+  origin_y: -2.5 
 
   cost_scaling_factor: 6.75
-  inflation_radius: 0.3
+  inflation_radius: 0.4
 
   plugins:
   - {name: obstacles_layer,  type: "costmap_2d::ObstacleLayer"}
   - {name: inflation_layer,     type: "costmap_2d::InflationLayer"}
-  - {name: 3d_obstacles_layer,  type: "costmap_2d::VoxelLayer"}
+  #- {name: 3d_obstacles_layer,  type: "costmap_2d::VoxelLayer"}
